# SPL-3

Client/: CMakeLists.txt  makefile
Client/include/: ConnectionHandler.h  EncoderDecoder.h  Task.h
Client/src/: ConnectionHandler.cpp  EncoderDecoder.cpp  Task.cpp  client.cpp
Server/src/main/java/bgu/spl/net/api/bidi/: oemr.java
Server/src/main/java/bgu/spl/net/impl/bidi/: BGSDB.java  BidiMessagingProtocolImpl.java  ConnectionsImpl.java  MessageEncoderDecoderImpl.java  ServerMain.java  UserInfo.java
Server/src/main/java/bgu/spl/net/impl/bidi/MessageTypes/: AckMsg.java  ErrorMsg.java  FollowMsg.java  LoginMsg.java  LogoutMsg.java  Msg.java  MsgType.java  NotificationMsg.java  PMrequestMsg.java  PostMsg.java  RegisterMsg.java  StatMsg.java  UserListReqMsg.java
Server/src/main/java/bgu/spl/net/impl/newsfeed/: NewsFeedServerMain.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
untitled/src/: Main.java
